writing-a-c-compiler-tests/tests/chapter_9/invalid_types/conflicting_function_declarations.c
int foo(int a);

int main(void) {
    return 5;
}

 
int foo(int a, int b) {
    return 4;
}